# dayones

./: .gitignore  .gitmodules  Dayones Presentation.pptx  README.md  dayones.md  devrequirements.txt  foundry.toml  package-lock.json  package.json  pyproject.toml  remappings.txt  requirements.txt
broadcast/Deploy.s.sol/300/: run-1725514826.json  run-1725515048.json  run-1725515395.json  run-1725517770.json  run-1725518142.json  run-1725518439.json  run-1725528389.json  run-1725528502.json  run-1725528529.json  run-1725528714.json  run-latest.json
broadcast/pyruns/: run-1726872737.json  run-1726914217.json  run-1726921875.json  run-1726921962.6776855.json  run-1726921962.831535.json  run-1727928319.943536.json  run-1727928319.981737.json  run-1728169401.943049.json  run-1728169401.9801338.json
frontend/dayones/: package-lock.json  package.json
frontend/dayones/public/: index.html  manifest.json
frontend/dayones/src/: App.css  App.js  index.css
frontend/dayones/src/components/: AdvertsPage.css  AdvertsPage.js  CartPage.css  CartPage.js  CategoryFilter.css  CategoryFilter.js  DeliveriesPage.css  DeliveriesPage.js  FeaturesSection.css  FeaturesSection.js  Footer.css  Footer.js  HeroSection.css  HeroSection.js  LandingPage.js  ListProductPage.css  ListproductPage.js  LoginPage.css  LoginPage.js  Navbar.css  Navbar.js  (+23 more)
script/: Deploy.s.sol  Test.s.sol
source/: compile.py  database.py  deploy.py  haversin.py  main.py  models.py
src/: DayOnesToken.sol  Haversine.sol  IOrderManager.sol  IOrderNft1155.sol  OrderManager.sol  OrderProxy.sol
test/: OrderManager.t.sol
(+3 files in other folders)
