[tool.poetry]
name = "dayones"
version = "0.1.0"
description = "a web3 ecommerce app"
authors = ["Mfon Nwa <mfonnwa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
fastapi = "^0.112.2"
jinja2 = "^3.1.4"
sqlmodel = "^0.0.22"
python-multipart = "^0.0.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
requests = "^2.32.3"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.2"
web3 = "^7.2.0"
haversine = "^2.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
